testdata/step-template/multiple.yaml
# yaml-language-server: $schema=../../.schemas/json/steptemplate-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: StepTemplate
metadata:
  name: quick-start-1
spec:
  try:
  # first operation: create the config map
  - apply:
      # file is relative to the test folder
      file: configmap.yaml
  # second operation: verify the config map exists and contains the expected data
  - assert:
      # file is relative to the test folder
      file: configmap.yaml
---
# yaml-language-server: $schema=../../.schemas/json/steptemplate-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: StepTemplate
metadata:
  name: quick-start-2
spec:
  try:
  # first operation: create the config map
  - apply:
      # file is relative to the test folder
      file: configmap.yaml
  # second operation: verify the config map exists and contains the expected data
  - assert:
      # file is relative to the test folder
      file: configmap.yaml
